--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,6 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+@import '~node_modules/modern-normalize/modern-normalize.css';
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
